syntax = "proto3";

package user;
option go_package = "proto/user";

message User {
  string id = 1;
  string name = 2;
  string description = 3;
}

service UserService {
  rpc GetUser(UserRequest) returns (User);
}

message UserRequest {
  string id = 1;
}
